target/classes/META-INF/fabric8/openshift/amq-fis-test-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=amq-fis-test&var-version=1.0-SNAPSHOT
  labels:
    app: amq-fis-test
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: ru.emdev.fis.test
  name: amq-fis-test
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: amq-fis-test
    provider: fabric8
    group: ru.emdev.fis.test
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=amq-fis-test&var-version=1.0-SNAPSHOT
      labels:
        app: amq-fis-test
        provider: fabric8
        version: 1.0-SNAPSHOT
        group: ru.emdev.fis.test
    spec:
      containers:
      - env:
        - name: AMQP_HOST
          value: single-broker-amq-broker.192.168.99.100.nip.io
        - name: SPRING_APPLICATION_JSON
          value: '{"server":{"tomcat":{"max-threads":1}}}'
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: amq-fis-test:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
            memory: 256Mi
          requests:
            cpu: "0.2"
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: amq-fis-test:latest
    type: ImageChange
