target/classes/META-INF/fabric8/openshift/amq-fis-test-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/camel.svg
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: amq-fis-test
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: ru.emdev.fis.test
  name: amq-fis-test
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: amq-fis-test
    provider: fabric8
    group: ru.emdev.fis.test
