target/classes/META-INF/fabric8/openshift/amq-fis-test-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: amq-fis-test
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: ru.emdev.fis.test
  name: amq-fis-test
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: amq-fis-test
